--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,5 @@
-<header class="header">
+<header class="header bgi-wrap">
+
    <div class="header__head flex">
       <div class="header__logo">
          <a target="_blank" href="https://psdfreebies.com/">
