add kate`s fix and og-tag

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header bgi-wrap">
+<header id="home" class="header bgi-wrap">
 
    <div class="header__head flex">
       <div class="header__logo">
@@ -18,19 +18,19 @@
 
          <ul class="navigate flex scale-0">
             <li class="navigate__item">
-               <a href="#">Home</a>
+               <a href="#home">Home</a>
             </li>
             <li class="navigate__item">
-               <a href="#">Pages</a>
+               <a href="#contact">Pages</a>
             </li>
             <li class="navigate__item">
-               <a href="#">Features</a>
+               <a href="#we-are">Features</a>
             </li>
             <li class="navigate__item">
-               <a href="#">Extensions</a>
+               <a href="#team">Extensions</a>
             </li>
             <li class="navigate__item">
-               <a href="#">Tutorials</a>
+               <a href="#articles">Tutorials</a>
             </li>
             <li data-contact="yes" class="navigate__item">
                <a id="contactUs" href="#">Contact us</a>
