--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,5 +1,14 @@
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="All about Creative Digital Agencies" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="robots" content="index,follow" />
+<meta property="og:title" content="All about Creative Digital Agencies" />
+<meta property="twitter:title" content="All about Creative Digital Agencies" />
+<meta property="og:image" content="https://pbs.twimg.com/profile_images/1091263383414820864/hs08haS0.jpg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:description" content="All about Creative Digital Agencies" />
+<meta property="og:type" content="website" />
 <link rel="shortcut icon" href="favicon.png" type="image/png">
 <title>Creative Digital Agencies</title>
 <script src="https://kit.fontawesome.com/cab443aa75.js" crossorigin="anonymous"></script>
